--- a/public/_locales/uk/messages.json
+++ b/public/_locales/uk/messages.json
@@ -52,6 +52,9 @@
     "reskip": {
         "message": "Пропустити"
     },
+    "unmute": {
+        "message": "Увімкнути звук"
+    },
     "paused": {
         "message": "Пауза"
     },
@@ -302,6 +305,9 @@
     "skip": {
         "message": "Пропустити"
     },
+    "mute": {
+        "message": "Вимкнути звук"
+    },
     "skip_category": {
         "message": "Пропустити {0}?"
     },
@@ -366,7 +372,7 @@
         "message": "Імпортувати/Експортувати Ваш ідентифікатор користувача"
     },
     "whatChangeUserID": {
-        "message": "Це потрібно тримати в секреті. Це як пароль, не варто ним ні з ким ділитися. Якщо він у кого-то є, він зможе видати себе за Вас."
+        "message": "Тримайте його в таємниці. Ставтеся до нього як до паролю і не передавайте нікому. Якщо хтось їм заволодіє, то зможе видати себе за вас. Якщо ви шукаєте публічний ID користувача, натисніть значок буфера обміну у спливаючому вікні."
     },
     "setUserID": {
         "message": "Встановити ідентифікатор користувача"
@@ -603,6 +609,9 @@
     },
     "autoSkipOnMusicVideos": {
         "message": "Автоматично пропустити усі сегменти, якщо присутній сегмент без музики"
+    },
+    "muteSegments": {
+        "message": "Дозволити сегменти, які відключають звук замість пропуску"
     },
     "colorFormatIncorrect": {
         "message": "Ви ввели колір в неправильному форматі. Це повинно бути 3-х або 6-ти значне шістнадцяткове число з символом # на початку."
