--- a/public/_locales/bg/messages.json
+++ b/public/_locales/bg/messages.json
@@ -52,6 +52,9 @@
     "reskip": {
         "message": "Пропускане отново"
     },
+    "unmute": {
+        "message": "Вкл. на звука"
+    },
     "paused": {
         "message": "На пауза"
     },
@@ -302,6 +305,9 @@
     "skip": {
         "message": "Пропускане"
     },
+    "mute": {
+        "message": "Заглушаване"
+    },
     "skip_category": {
         "message": "Пропускане на {0}?"
     },
@@ -366,7 +372,7 @@
         "message": "Импортиране/експортиране на вашия UserID"
     },
     "whatChangeUserID": {
-        "message": "Това трябва да се пази тайно. То е като парола и не трябва да се споделя с никого. Ако някой го притежава, той може да се представи за вас."
+        "message": "Това трябва да се пази в тайна. То е като парола и не трябва да се споделя с никого. Ако някой го има, може да се представи за вас. Ако търсите своя публичен потребителски идентификатор, щракнете върху иконата на клипборда в изскачащия прозорец."
     },
     "setUserID": {
         "message": "Задаване на UserID"
@@ -603,6 +609,9 @@
     },
     "autoSkipOnMusicVideos": {
         "message": "Автоматично пропускане на всички сегменти, когато има сегмент без музика"
+    },
+    "muteSegments": {
+        "message": "Разрешаване на сегменти, които заглушават звука, вместо да се пропускат"
     },
     "colorFormatIncorrect": {
         "message": "Вашият цвят не е форматиран правилно. Трябва да бъде 3- или 6-цифрен шестнадесетичен код с „#“ в началото."
